# paras-claim-rewards-contract

./: Cargo.toml  README.md  env.sample  package.json
paras-claim-rewards-contract/: Cargo.toml
paras-claim-rewards-contract/src/: lib.rs  rewards.rs  token_receiver.rs
res/: fungible_token.wasm  paras_claim_rewards_contract.wasm
src/: lib.rs  rewards.rs  utils.rs
src/helpers/: Near.js
tests/: simulation_tests.rs  utils.rs
