[package]
name = "paras-claim-rewards-contract-wrapper"
version = "0.0.1"
authors = ["Paras"]
edition = "2018"

[dev-dependencies]
near-sdk = "=3.1.0"
near-sdk-sim = "=3.1.0"
paras-claim-rewards-contract = { path = "./paras-claim-rewards-contract" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = [
  "paras-claim-rewards-contract",
]
